# megatech-vulkan-dispatch

./: .gitignore  .gitmodules  Doxyfile  README.md  meson.build  meson.options  requirements.txt
documentation/: extra.css  namespaces.dox
include/megatech/vulkan/: dispatch.hpp
include/megatech/vulkan/dispatch/: commands.hpp  defs.hpp  error.hpp  tables.hpp
include/megatech/vulkan/dispatch/internal/base/: fnv_1a.hpp
src/megatech/vulkan/dispatch/: error.cpp  tables.cpp
tests/: benchmark.cpp  benchmark_dispatch.cpp  common.hpp  device_dispatch.cpp  global_dispatch.cpp  instance_dispatch.cpp  meson.build  test_device_dispatch.cpp  test_fnv_1a.cpp  test_global_dispatch.cpp  test_instance_dispatch.cpp
tools/: Doxyfile  README.md  meson.build  pyproject.toml
tools/megatech/vulkan/applications/: DispatchTableGenerator.py
